--- a/index.css
+++ b/index.css
@@ -1,5 +1,47 @@
-h1{
+#display{
+    height: 15vh;
+    width:30vw;
+    background-color:rgb(243, 198, 205);
     text-align: center;
-    text-decoration: underline;
-    font-size: 4rem;
+    margin-left: 10%;
+    margin-right: 50%;
+    position: relative;
+    border:2px solid black;
+    border-radius: 12px;
 }
+.calculator{
+    border:2px solid black;
+    background-color: darkgrey;
+    margin: auto;
+    width: 40vw;
+    border-radius: 12px;
+   
+    }
+.calcButtons{
+    display: grid;
+    background-color: lightgrey;
+   
+    position: relative;
+    border: 2px solid black;
+    top: 0;
+    border-radius: 12px;
+}
+#item{
+     display: flex;
+    font-size: 4em;
+    width:8vw;
+    height: 15vh;
+    justify-content: space-evenly;
+    padding-top: 4%;
+}
+span{
+    font-size: .5em;
+}
+.row1, .row2, .row3, .row4, .row5{
+    display: flex;
+    justify-content: stretch;
+ 
+    
+}
+
+
